tests/paczka1/fuzzy1/77571605.err
Error in line 2: brTl1HODY0 A40 73,5
Error in line 8: cVd A40 40,7
Error in line 9: brTl1HODY0 S274 52,5
Error in line 11: cVd S274 62,5
Error in line 20: brTl1HODY0 A474 14,5
Error in line 23: brTl1HODY0 A40 73,3
Error in line 26: cVd A40 28,3
Error in line 29: p6h8ycW S830 73,7
Error in line 28: 7s0PnTark A40 19,5
Error in line 27: cVd A474 65,8
